notes-app/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app
spec:
  selector:
    app: notes-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
